<RelativeLayout xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="wrap_content"
    a:paddingLeft="@dimen/activity_horizontal_margin"
    a:paddingRight="@dimen/activity_horizontal_margin"
    a:paddingTop="20dp"
    a:paddingBottom="20dp">
    <EditText a:id="@+id/tip_input"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_alignParentTop="true"
        a:layout_centerHorizontal="true"
        a:layout_margin="8dp"
        a:inputType="numberDecimal"
        a:textSize="18sp"
        a:hint="@string/tip_input" />
    <RadioGroup a:id="@+id/tip_selector"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:layout_centerHorizontal="true"
        a:layout_below="@id/tip_input"
        a:orientation="horizontal">
        <RadioButton a:id="@+id/btn_small_tip"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_margin="8dp"
            a:padding="8dp"
            a:text="@string/small_tip_percent_text" />
        <RadioButton a:id="@+id/btn_medium_tip"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_margin="8dp"
            a:checked="true"
            a:padding="8dp"
            a:text="@string/medium_tip_percent_text" />
        <RadioButton a:id="@+id/btn_high_bill"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_margin="8dp"
            a:padding="8dp"
            a:text="@string/high_tip_percent_text" />
    </RadioGroup>
    <TextView a:id="@+id/txt_tip_amount"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:layout_centerHorizontal="true"
        a:layout_below="@id/tip_selector"
        a:layout_margin="8dp"
        a:textSize="18sp"
        a:text="@string/tip_amount_place_holder" />
</RelativeLayout>